--- a/ci/cloudbuild.yaml
+++ b/ci/cloudbuild.yaml
@@ -10,11 +10,12 @@ steps:
       echo "Using Node version $(node --version)"
       npm install
       npm run build
-      ls /workspace/svelte/dist
+      ls /workspace/svelte/build
 
   - id: 'Copy to Cloud Storage'
     name: 'google/cloud-sdk:slim'
     script: |
       #! /usr/bin/env bash
-      gsutil cp -r /workspace/svelte/dist/* gs://conversations.dora.dev/
+      gsutil -m rm -r gs://conversations.dora.dev/**
+      gsutil cp -r /workspace/svelte/build/* gs://conversations.dora.dev/
       
