ci: enable Playwright E2E tests on Netlify builds
- Update `netlify.toml` to execute `npm run ci:test:e2e` during the build process.
- Add `ci:test:e2e` script to `package.json` which ensures Playwright browsers are installed before running tests.
- Configure `playwright.config.ts` to use `vite preview` instead of the dev server, ensuring tests run against the production build.
- Update `core.spec.ts` to hide the Netlify Drawer in `beforeEach`, prohibiting it from intercepting clicks during tests.

Fixes #59

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test:e2e:run": "npx playwright test -c test/playwright/playwright.config.ts",
+		"test:e2e": "npm run build && npm run test:e2e:run",
+		"ci:test:e2e": "npx playwright install && npm run test:e2e:run"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.57.0",
